--- a/index.html
+++ b/index.html
@@ -15,7 +15,35 @@
     
   </head>
  <body>
- 
+   <div class="container">
+      <div class="navbar navbar-default" role="navigation">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Water For Living</a>
+        </div>
+        <div class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Link</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+          </ul>
+        </div>
+      </div>
+
+      <!-- Main component for a primary marketing message or call to action -->
+      <div class="jumbotron">
+        <h1>Water For Living</h1>
+        <p>Some dummy text, will update accordingly<p>
+          <a class="btn btn-lg btn-warning" href="#" role="button">Button &raquo;</a>
+        </p>
+      </div>
+
+    </div> <!-- /container -->
  
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="http://bootstrapdocs.com/v3.0.3/docs/dist/js/bootstrap.min.js"></script>
