--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="./assets/css/theme.css">
     
+    
   </head>
  <body>
    <div class="container">
@@ -28,14 +29,12 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Link</a></li>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
+            <li class="active"><a href="#"><i class="fa fa-home" aria-hidden="true"></i> Home</a></li>
+            <li><a href="#"><i class="fa fa-info" aria-hidden="true"></i> About</a></li>
           </ul>
         </div>
       </div>
 
-      <!-- Main component for a primary marketing message or call to action -->
       <div class="jumbotron">
         <h1>Water For Living</h1>
         <p>Some dummy text, will update accordingly<p>
